--- a/.travis.yml
+++ b/.travis.yml
@@ -16,19 +16,6 @@ branches:
 before_install:
   - git fetch -t
   - git checkout $TRAVIS_BRANCH
-
-  - git config --global user.email "builds@travis-ci.com"
-  - git config --global user.name "Travis CI"
-  - git fetch -t
-  - git checkout $TRAVIS_BRANCH
-  - export GIT_TAG=$(git describe --abbrev=0 --tags).$(git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count)
-  - git tag -a $GIT_TAG -m "Travis CI https://travis-ci.org/iltommi/neutrino"
-  - git push --quiet https://${github_token}@github.com/iltommi/neutrino $GIT_TAG
-  
-  - git symbolic-ref HEAD
-  - git describe --abbrev=0 --tags
-  - git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count
-  - git rev-parse --short HEAD
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y qt5-default qtbase5-dev libqt5svg5 libqt5svg5-dev qtmultimedia5-dev qttools5-dev libqt5multimediawidgets5 libqt5clucene5 libqt5designer5 libqt5designercomponents5 libqt5help5 libqt5printsupport5; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
@@ -40,7 +27,7 @@ before_install:
   - cd PythonQt
   - mkdir -p compile && cd compile
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake -DQt5_DIR=/usr/lib/x86_64-linux-gnu -DPythonQt_Wrap_QtAll=TRUE .. && make && make install; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .. && make && make install; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/local/bin/g++-6 -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .. && make && make install; fi
   - cd ../..
 
 script:
@@ -57,4 +44,5 @@ deploy:
   api_key: $github_token
   file: "${RELEASE_FILE}"
   skip_cleanup: true
-  overwrite: true
+  on:
+    tags: true
