--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,14 @@ before_install:
   - git config --global user.email "builds@travis-ci.com"
   - git config --global user.name "Travis CI"
   - git fetch -t
-  - export GIT_TAG=$(git describe --abbrev=0 --tags | cut -d . -f 1).$(git rev-list master $(git describe --abbrev=0 --tags)^..HEAD --count)
+  - export THIS_TAG=$(git describe --abbrev=0 --tags)
+  - echo $THIS_TAG
+  - export STUB_TAG=$(echo ${THIS_TAG} | cut -d . -f 1)
+  - echo $STUB_TAG
+  - export NUMBER_TAG=$(git rev-list master ${THIS_TAG}^..HEAD --count)
+  - echo $NUMBER_TAG
+  - export GIT_TAG=${STUB_TAG}.${NUMBER_TAG}
+  - echo $GIT_TAG
   - git tag -a $GIT_TAG -m "Travis CI https://travis-ci.org/iltommi/neutrino"
   - git push --quiet https://${github_token}@github.com/iltommi/neutrino $GIT_TAG
     
